applyChunkOpsDeprecated should retry on notMaster or network errors

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.2.0-rc3
    • Affects Version/s: None
    • Component/s: Sharding
    • None
    • Fully Compatible
    • ALL
    • Sharding B (10/30/15), Sharding C (11/20/15)
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      This was found through code inspection. The moveChunk command under CSRS will terminate the donor shard instance if the applyOps command returns a notMaster status. In particular, this line and the handling here.

      While we are at it, we should also get rid of the try/catch block around applyChunkOpsDeprecated because this method should never throw in 3.2.

      The splitChunk command will also benefit from the same retry logic.

            Assignee:
            Misha Tyulenev (Inactive)
            Reporter:
            Kaloian Manassiev
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: