SERVER-21174 applyChunkOpsDeprecated should retry on notMaster or network errors